--- a/Object_custom_detection.ipynb
+++ b/Object_custom_detection.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Object_custom_detection.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyNFVN7pKS1F/EWlryg8x+Qa",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +16,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/JaiLohana16/Yolo/blob/main/Object_custom_detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
